[package]
name = "rode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rode"
path = "src/main.rs"

[dependencies]
rusty_v8 = "0.32"
notify = "6.1"
colored = "2.0"
chrono = "0.4"
regex = "1.10"
bcrypt = "0.15"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "v1", "v7", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
serde_json = "1.0"
